# serializer version: 1
# name: test_cli_json_output_all_sources
  '''
  {
    "date": "2025-11-21",
    "calendar_events": [],
    "github_activities": [
      {
        "type": "commit",
        "title": "Pushed 3 commits",
        "url": "https://github.com/testuser/test-repo",
        "repository": "testuser/test-repo",
        "timestamp": "2025-11-21T10:30:00Z",
        "details": null
      },
      {
        "type": "pr",
        "title": "Add new feature",
        "url": "https://github.com/testuser/awesome-project/pull/42",
        "repository": "testuser/awesome-project",
        "timestamp": "2025-11-21T14:15:00Z",
        "details": "Action: opened"
      },
      {
        "type": "issue",
        "title": "Fix critical bug",
        "url": "https://github.com/testuser/bug-tracker/issues/123",
        "repository": "testuser/bug-tracker",
        "timestamp": "2025-11-21T09:00:00Z",
        "details": "Action: opened"
      },
      {
        "type": "review",
        "title": "Update documentation",
        "url": "https://github.com/testuser/code-review/pull/5",
        "repository": "testuser/code-review",
        "timestamp": "2025-11-21T16:45:00Z",
        "details": "Reviewed PR"
      }
    ],
    "atlassian_items": [
      {
        "type": "jira_issue",
        "title": "Implement new authentication feature",
        "url": "https://test.atlassian.net/browse/PROJ-123",
        "key": "PROJ-123",
        "status": "In Progress",
        "updated": "2025-11-21T10:30:00Z"
      },
      {
        "type": "jira_issue",
        "title": "Fix critical bug in payment processing",
        "url": "https://test.atlassian.net/browse/PROJ-456",
        "key": "PROJ-456",
        "status": "Done",
        "updated": "2025-11-21T14:45:00Z"
      },
      {
        "type": "confluence_page",
        "title": "API Documentation",
        "url": "https://test.atlassian.net/wiki/spaces/DEV/pages/123456/API+Documentation",
        "key": "123456",
        "status": null,
        "updated": "2025-11-21T09:15:00Z"
      },
      {
        "type": "confluence_page",
        "title": "Team Meeting Notes - Nov 21",
        "url": "https://test.atlassian.net/wiki/spaces/TEAM/pages/789012/Meeting+Notes",
        "key": "789012",
        "status": null,
        "updated": "2025-11-21T16:00:00Z"
      }
    ],
    "things_tasks": [],
    "wakatime_activities": [
      {
        "project": "pkm-tool",
        "duration_seconds": 7200,
        "language": "Python"
      },
      {
        "project": "awesome-app",
        "duration_seconds": 3600,
        "language": "Python"
      }
    ],
    "google_docs": [],
    "metadata": {}
  }
  
  '''
# ---
# name: test_cli_json_output_with_mocks
  '''
  {
    "date": "2025-11-21",
    "calendar_events": [],
    "github_activities": [
      {
        "type": "commit",
        "title": "Pushed 3 commits",
        "url": "https://github.com/testuser/test-repo",
        "repository": "testuser/test-repo",
        "timestamp": "2025-11-21T10:30:00Z",
        "details": null
      },
      {
        "type": "pr",
        "title": "Add new feature",
        "url": "https://github.com/testuser/awesome-project/pull/42",
        "repository": "testuser/awesome-project",
        "timestamp": "2025-11-21T14:15:00Z",
        "details": "Action: opened"
      },
      {
        "type": "issue",
        "title": "Fix critical bug",
        "url": "https://github.com/testuser/bug-tracker/issues/123",
        "repository": "testuser/bug-tracker",
        "timestamp": "2025-11-21T09:00:00Z",
        "details": "Action: opened"
      },
      {
        "type": "review",
        "title": "Update documentation",
        "url": "https://github.com/testuser/code-review/pull/5",
        "repository": "testuser/code-review",
        "timestamp": "2025-11-21T16:45:00Z",
        "details": "Reviewed PR"
      }
    ],
    "atlassian_items": [],
    "things_tasks": [],
    "wakatime_activities": [
      {
        "project": "pkm-tool",
        "duration_seconds": 7200,
        "language": "Python"
      },
      {
        "project": "awesome-app",
        "duration_seconds": 3600,
        "language": "Python"
      }
    ],
    "google_docs": [],
    "metadata": {}
  }
  
  '''
# ---
# name: test_cli_markdown_output_all_sources
  '''
  # Daily Report - 2025-11-21
  
  ## 🐙 GitHub Activities
  
  - 📋 **09:00** [testuser/bug-tracker](https://github.com/testuser/bug-tracker/issues/123) - Fix critical bug
    - Action: opened
  - 📝 **10:30** [testuser/test-repo](https://github.com/testuser/test-repo) - Pushed 3 commits
  - 🔀 **14:15** [testuser/awesome-project](https://github.com/testuser/awesome-project/pull/42) - Add new feature
    - Action: opened
  - 👁️ **16:45** [testuser/code-review](https://github.com/testuser/code-review/pull/5) - Update documentation
    - Reviewed PR
  
  ## 🏢 Atlassian (Jira/Confluence)
  
  - 📄 [123456](https://test.atlassian.net/wiki/spaces/DEV/pages/123456/API+Documentation) - API Documentation
  - 📋 [PROJ-123](https://test.atlassian.net/browse/PROJ-123) - Implement new authentication feature (In Progress)
  - 📋 [PROJ-456](https://test.atlassian.net/browse/PROJ-456) - Fix critical bug in payment processing (Done)
  - 📄 [789012](https://test.atlassian.net/wiki/spaces/TEAM/pages/789012/Meeting+Notes) - Team Meeting Notes - Nov 21
  
  ## ⏱️ Wakatime - Coding Activity
  
  **Total Time:** 3.00 hours
  
  - pkm-tool (Python): 2.00h
  - awesome-app (Python): 1.00h
  
  
  '''
# ---
# name: test_cli_markdown_output_with_mocks
  '''
  # Daily Report - 2025-11-21
  
  ## 🐙 GitHub Activities
  
  - 📋 **09:00** [testuser/bug-tracker](https://github.com/testuser/bug-tracker/issues/123) - Fix critical bug
    - Action: opened
  - 📝 **10:30** [testuser/test-repo](https://github.com/testuser/test-repo) - Pushed 3 commits
  - 🔀 **14:15** [testuser/awesome-project](https://github.com/testuser/awesome-project/pull/42) - Add new feature
    - Action: opened
  - 👁️ **16:45** [testuser/code-review](https://github.com/testuser/code-review/pull/5) - Update documentation
    - Reviewed PR
  
  ## ⏱️ Wakatime - Coding Activity
  
  **Total Time:** 3.00 hours
  
  - pkm-tool (Python): 2.00h
  - awesome-app (Python): 1.00h
  
  
  '''
# ---
# name: test_cli_with_api_errors
  '''
  # Daily Report - 2025-11-21
  
  
  '''
# ---
